converted to he
for an prsintion language was changed

--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
             <img  class= "img img-happy"src="imgs/happy.png" alt="">
             <img class="img img-sad" src="imgs/sad.png" alt="">
             
-            <h2 class="title">Let Your Emtion</h2>
-            <h1 class="yelid">FREE </h1>
+            <h2 class="title">שחרר|י את הרגש</h2>
+            <h1 class="yelid">חינם</h1>
         </div>
         <form method="post" action="send.php">
             <div class="contionr emotion">
                 <div id="Joy" data-value="Joy" class="btn">Joy
                 </div>
-                <div id="Trust" class="btn" data-value="Trust">Trust
+                <div id="Trust" class="btn" data-value="Trust">שמח|ה
                 </div>
-                <div id="Feared" class="btn" data-value="Feared">Feared
+                <div id="Feared" class="btn" data-value="Feared">פוחד|ת
                 </div>
-                <div id="Suprised" class="btn" data-value="Suprised">Suprised
+                <div id="Suprised" class="btn" data-value="Suprised">מופתע|ת
                 </div>
-                <div id="Sad" class="btn" data-value="Sad">Sad
+                <div id="Sad" class="btn" data-value="Sad">עצוב|ה
                 </div>
-                <div id="Disgust" class="btn" data-value="Disgust">Disgust
+                <div id="Disgust" class="btn" data-value="Disgust">נגעל|ת
                 </div>
-                <div id="Angry" class="btn" data-value="Angry">Angry
+                <div id="Angry" class="btn" data-value="Angry">כועס|ת
                 </div>
-                <div id="Anticipated" class=" btn" data-value="anticipated">anticipated
+                <div id="Anticipated" class=" btn" data-value="anticipated">מצפה
                 </div>
             </div>
         </form>
@@ -49,8 +49,8 @@
         <div class="color-contioner">
             <img class="img img-angry" src="imgs/angry.png" alt="">
             <img class="img img-love" src="imgs/in love.png" alt="">
-            <h2 class="title">pick the color that most <span class="bold">express</span>  you</h2>
-            <h1 class="yelid">Now</h1>
+            <h2 class="title">בחר|י את הצבע שלדתעך מביע את הרגש בזמן הווה  <span class="bold">express</span>  you</h2>
+            <h1 class="yelid">עכשיו</h1>
             <form method="post" action="send.php">
                 <div class="contionr color">
                     <div id="yellow" class="btn yellow btn-size" data-value-color="yellow">
@@ -78,7 +78,7 @@
         </div>
     </div>
     <div class="answer">
-        <h2 class="hope" >hope it helps you to understand your self</h2>
+        <h2 class="hope" >אני מקווה שזה ייעזור לכם כמו שזה הציל אותי</h2>
 
 
     </div>
