--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="top">
-        <h1 class="hader">Emtion calculateur</h1>
-        <p class="contant">Based on the research of Plutchik </p>
+        <h1 class="hader">משחבון רגשות</h1>
+        <p class="contant">מבוסס על מחקר פרטי </p>
     </div>
 
     <div class="middle">
@@ -49,7 +49,7 @@
         <div class="color-contioner">
             <img class="img img-angry" src="imgs/angry.png" alt="">
             <img class="img img-love" src="imgs/in love.png" alt="">
-            <h2 class="title">בחר|י את הצבע שלדתעך מביע את הרגש בזמן הווה  <span class="bold">express</span>  you</h2>
+            <h2 class="title">בחר|י את הצבע שלדתעך מביע את הרגש בזמן הווה</h2>
             <h1 class="yelid">עכשיו</h1>
             <form method="post" action="send.php">
                 <div class="contionr color">
