--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="top">
-        <h1 class="hader">משחבון רגשות</h1>
+        <h1 class="hader">מחשבון רגשות</h1>
         <p class="contant">מבוסס על מחקר פרטי </p>
     </div>
 
