bottom title updeated

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="color-contioner">
             <img class="img img-angry" src="imgs/angry.png" alt="">
             <img class="img img-love" src="imgs/in love.png" alt="">
-            <h2 class="title">בחר|י את הצבע שלדתעך מביע את הרגש בזמן הווה</h2>
+            <h2 class="title">בחר|י את הצבע שמביע את הרגש הזה</h2>
             <h1 class="yelid">עכשיו</h1>
             <form method="post" action="send.php">
                 <div class="contionr color">
