--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </div>
         <form method="post" action="send.php">
             <div class="contionr emotion">
-                <div id="Joy" data-value="Joy" class="btn">Joy
+                <div id="Joy" data-value="Joy" class="btn">שמח|ה
                 </div>
-                <div id="Trust" class="btn" data-value="Trust">שמח|ה
+                <div id="Trust" class="btn" data-value="Trust">בטוח|ה
                 </div>
                 <div id="Feared" class="btn" data-value="Feared">פוחד|ת
                 </div>
